# pyWeaviateTest

./: .project  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
scripts/: blackisort  install  installAndTest  test  weaviate
storage/: dockerutil.py  weaviate_qec.py  weaviatestorage.py
tests/: basetest.py  testWeaviate.py  testYaml.py  test_docker.py  test_weaviate.py
